# test-gpt

./: .gitignore  ADR-0001.md  Dockerfile  Makefile  README.md  TECHNOTES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/svc_catalogue/: __init__.py  config.py  crud.py  csv_import.py  db.py  main.py  models.py  schemas.py
src/svc_catalogue/api/: dependencies.py  ops.py
src/svc_catalogue/api/v1/: services.py
src/svc_catalogue/scripts/: export_openapi.py
tests/: conftest.py  test_csv_import.py  test_openapi_export.py  test_ops.py  test_services.py
