[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svc-catalogue"
version = "0.1.0"
description = "FastAPI application for registering and discovering services."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Service Catalogue Maintainers" }
]
dependencies = [
  "fastapi==0.118.0",
  "uvicorn[standard]==0.37.0",
  "sqlmodel==0.0.25",
  "SQLAlchemy==2.0.43",
  "pydantic==2.11.9",
  "pydantic-settings==2.11.0",
  "prometheus-fastapi-instrumentator==7.1.0",
  "psycopg[binary]==3.2.10"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "httpx==0.28.1",
  "ruff==0.13.2",
  "black==25.9.0",
  "pip-audit==2.9.0",
  "mypy==1.18.2"
]

[tool.uv]
dev-dependencies = [".[dev]"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
  "tests"
]
